--- a/foundations/intro-to-css/01-css-methods/styles.css
+++ b/foundations/intro-to-css/01-css-methods/styles.css
@@ -1,7 +1,7 @@
 /* div: a red background, white text, a font size of 32px, center aligned, and bold
  */
 
-.div{
+div {
     color: white;
     background-color: red;
     font-size: 32px;
