--- a/foundations/intro-to-css/03-grouping-selectors/style.css
+++ b/foundations/intro-to-css/03-grouping-selectors/style.css
@@ -1,1 +1,17 @@
 /* Add CSS Styling */
+
+.button-1 {
+    background-color: black;
+    color: white;
+}
+
+.button-2 {
+    background-color: yellow;
+    color: black;
+}
+
+.button-1, 
+.button-2 {
+    font-size: 28px;
+    font-family: 'Helvetica', 'Times New Roman', sans-serif;
+}
