--- a/foundations/intro-to-css/05-descendant-combinator/style.css
+++ b/foundations/intro-to-css/05-descendant-combinator/style.css
@@ -1,1 +1,9 @@
 /* Add CSS Styling */
+
+.container p {
+    color: red;
+    font-size: 20px;
+    background-color: yellow;
+    text-align: center;
+
+}
