--- a/foundations/cascade/01-cascade-fix/style.css
+++ b/foundations/cascade/01-cascade-fix/style.css
@@ -2,13 +2,13 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.para {
-  color: hsl(0, 0%, 0%);
-  font-weight: 800;
+p {
+  font-size: 22px;
 }
 
 .para {
-  font-size: 22px;
+  color: hsl(0, 0%, 0%);
+  font-weight: 800;
 }
 
 .para.small-para {
@@ -35,7 +35,7 @@ div.text {
   font-weight: 100;
 }
 
-.text.child {
+.text .child {
   color: rgb(0, 0, 0);
   font-weight: 800;
   font-size: 14px;
