--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -1,27 +1,41 @@
 body {
   background: #eee;
   font-family: sans-serif;
+
 }
 
 .card {
   width: 400px;
   background: #fff;
-  margin: 16px auto;
+  padding: 10px;
+  margin: auto;
 }
 
 .title {
   background: #e3f4ff;
+  font-size: 16px;
+  font-weight: 500px;
+  padding: 10px 0;
 }
 
 .content {
   background: #e3f4ff;
+  margin: 20px 0;
+  padding: 15px 0;
 }
 
 .button-container {
   background: #e3f4ff;
+  text-align: center;
+  /* margin-top: 16px; */
+  padding: 10px;
 }
 
 button {
+  display: block;
   background: white;
+  margin: auto;
+  padding: 10px;
   border: 1px solid #eee;
+
 }
