--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -4,38 +4,39 @@ body {
 
 }
 
+
 .card {
   width: 400px;
   background: #fff;
   padding: 10px;
-  margin: auto;
+  margin: 100px auto;
 }
 
 .title {
   background: #e3f4ff;
   font-size: 16px;
-  font-weight: 500px;
-  padding: 10px 0;
+  font-weight: bold;
+  padding: 10px 5px;
 }
 
 .content {
   background: #e3f4ff;
-  margin: 20px 0;
-  padding: 15px 0;
+  margin: 10px 0;
+  padding: 15px 5px;
+
 }
 
 .button-container {
   background: #e3f4ff;
   text-align: center;
-  /* margin-top: 16px; */
   padding: 10px;
 }
 
 button {
   display: block;
   background: white;
-  margin: auto;
-  padding: 10px;
+  margin: 0 auto;
+  padding: 10px 20px;
   border: 1px solid #eee;
 
 }
